# tesla-ble-zig

./: .gitignore  Makefile  README.md  build.zig  build.zig.zon
esphome/: secrets.yaml.example  tesla-ble-nanoc6.yml  tesla_zig_glue.h
esphome-tesla-ble-local/components/tesla_ble_vehicle/: __init__.py  log.cpp  tesla_ble_vehicle.cpp  tesla_ble_vehicle.h
include/: tesla_ble_zig.h
mobile/android/: TeslaBLEClient.kt
mobile/ios/: Package.swift
mobile/ios/Sources/TeslaBLECore/: TeslaBLEClient.swift  module.modulemap
mobile/ios/Sources/TeslaBLECore/include/: tesla_ble_zig.h
proto/: universal_message.options  vcsec.options
src/: c_bindings.zig  client.zig  crypto.zig  csm.zig  firmware.zig  jni_bindings.zig  main.zig  nimble.zig  protobuf.zig  protocol.zig  queue.zig  root.zig  scheduler.zig  scratch.zig  session.zig  test_integration.cpp
standalone/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
standalone/main/: CMakeLists.txt  Kconfig.projbuild  main.c
